app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service.myapp.svc.cluster.local:3000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-UserId"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/aleksandr-palyvoda($|/)(.*)
            backend:
              serviceName: user-service
              servicePort: 3000
