auth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              serviceName: auth-service
              servicePort: 3000
            path: /login
          - backend:
              serviceName: auth-service
              servicePort: 3000
            path: /logout
          - backend:
              serviceName: auth-service
              servicePort: 3000
            path: /register
          - backend:
              serviceName: auth-service
              servicePort: 3000
            path: /auth
          - backend:
              serviceName: auth-service
              servicePort: 3000
            path: /signin
